--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -13,7 +13,7 @@
 
     <add key="mysql" value="Server=localhost;Database=felicis;Uid=root;Pwd=12345;"/>
     <add key="SiteName" value="Site Core"/>
-    <add key="SecurityEnabled" value="true" />
+    <add key="SecurityEnabled" value="false" />
     
   </appSettings>
   <system.web>
