--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -12,7 +12,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WebSite</RootNamespace>
-    <AssemblyName>WebSite</AssemblyName>
+    <AssemblyName>WebSite_Core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -127,7 +127,6 @@
     <Compile Include="Controllers\Admin\ManageUserController.cs" />
     <Compile Include="Controllers\Admin\ManageUserroleController.cs" />
     <Compile Include="Controllers\Admin\SecurityController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
