--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -14,6 +14,7 @@
     <add key="mysql" value="Server=localhost;Database=felicis;Uid=root;Pwd=12345;"/>
     <add key="SiteName" value="Site Core"/>
     <add key="SecurityEnabled" value="false" />
+    <add key="DateFormat" value="dd MMM, yyyy" />
     
   </appSettings>
   <system.web>
