--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Compile Include="App_Start\Filters\CheckAuthentication.cs" />
     <Compile Include="Controllers\Admin\AdminController.cs" />
+    <Compile Include="Controllers\Admin\ManageCacheController.cs" />
     <Compile Include="Controllers\Admin\ManageMenuController.cs" />
     <Compile Include="Controllers\Admin\ManageRoleController.cs" />
     <Compile Include="Controllers\Admin\ManageUserController.cs" />
@@ -536,6 +537,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\Core.pubxml" />
+    <Content Include="Views\ManageCache\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
