cache, several fixes

--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\..\Felicis\Lib\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -47,6 +50,7 @@
     <Compile Include="Cache\ObjectStore.cs" />
     <Compile Include="Cache\StoreItem.cs" />
     <Compile Include="FileManager.cs" />
+    <Compile Include="Log\LogManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\EncryptionManager.cs" />
     <Compile Include="Security\SecurityManager.cs" />
